--- a/hws-orchestration/hws-orchestration-ear/pom.xml
+++ b/hws-orchestration/hws-orchestration-ear/pom.xml
@@ -16,7 +16,6 @@
 
    <dependencies>
 
-      <!-- Depend on the ejb module and war so that we can package them -->
       <dependency>
          <groupId>com.pahlsoft.hws</groupId>
          <artifactId>hws-orchestration-ejb</artifactId>
@@ -25,19 +24,15 @@
    </dependencies>
 
    <build>
-      <finalName>hws-orchestration-${project.parent.version}</finalName>
+      <finalName>hws-orchestration</finalName>
     
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-ear-plugin</artifactId>
-            <version>2.6</version>
+            <version>2.10.1</version>
             <configuration>
-               <!-- Tell Maven we are using Java EE 6 -->
-               <version>6</version>
-               <!-- Use Java EE ear libraries as needed. Java EE ear libraries 
-                  are in easy way to package any libraries needed in the ear, and automatically 
-                  have any modules (EJB-JARs and WARs) use them -->
+               <version>7</version>
                <defaultLibBundleDir>lib</defaultLibBundleDir>
                <modules></modules>
             </configuration>
@@ -45,26 +40,5 @@
 
       </plugins>
    </build>
-   
-   <profiles>
-      <!--<profile>-->
-         <!--&lt;!&ndash; When built in OpenShift the 'openshift' profile will be used when invoking mvn. &ndash;&gt;-->
-         <!--&lt;!&ndash; Use this profile for any OpenShift specific customization your app will need. &ndash;&gt;-->
-         <!--&lt;!&ndash; By default that is to put the resulting archive into the 'deployments' folder. &ndash;&gt;-->
-         <!--&lt;!&ndash; http://maven.apache.org/guides/mini/guide-building-for-different-environments.html &ndash;&gt;-->
-         <!--<id>openshift</id>-->
-         <!--<build>-->
-            <!--<plugins>-->
-               <!--<plugin>-->
-                  <!--<artifactId>maven-ear-plugin</artifactId>-->
-                  <!--<version>2.6</version>-->
-                  <!--<configuration>-->
-                     <!--<outputDirectory>deployments</outputDirectory>-->
-                  <!--</configuration>-->
-               <!--</plugin>-->
-            <!--</plugins>-->
-         <!--</build>-->
-      <!--</profile>-->
-   </profiles>
 
    </project>
