--- a/hws-orchestration/pom.xml
+++ b/hws-orchestration/pom.xml
@@ -38,14 +38,12 @@
     <build>
         <pluginManagement>
             <plugins>
-                <!-- Compiler plugin enforces Java 1.6 compatibility and
-                    activates annotation processors -->
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
                 <!-- The JBoss AS plugin deploys your ear to a local JBoss
@@ -53,28 +51,28 @@
                 <!-- Due to Maven's lack of intelligence with EARs we need
                     to configure the jboss-as maven plugin to skip deployment for all modules.
                     We then enable it specifically in the ear module. -->
-                <plugin>
-                    <groupId>org.jboss.as.plugins</groupId>
-                    <artifactId>jboss-as-maven-plugin</artifactId>
-                    <version>7.1.1.Final</version>
-                    <inherited>true</inherited>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
-                <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.4.Final</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+                <!--<plugin>-->
+                    <!--<groupId>org.jboss.as.plugins</groupId>-->
+                    <!--<artifactId>jboss-as-maven-plugin</artifactId>-->
+                    <!--<version>7.1.1.Final</version>-->
+                    <!--<inherited>true</inherited>-->
+                    <!--<configuration>-->
+                        <!--<skip>true</skip>-->
+                    <!--</configuration>-->
+                <!--</plugin>-->
+                <!--<plugin>-->
+                <!--<groupId>org.jboss.as.plugins</groupId>-->
+                <!--<artifactId>jboss-as-maven-plugin</artifactId>-->
+                <!--<version>7.4.Final</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>install</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             </plugins>
         </pluginManagement>
     </build>
